--- a/aula-02.html
+++ b/aula-02.html
@@ -1,10 +1,7 @@
 <html>
 <head>
     <title>Aula 02 - 26/03/2019</title>
-    <script type="text/javascript" src="dom.js"></script>
-    <script>
-
-    </script>
+    <script type="text/javascript" src="./js/aula-02.js"></script>
 
 </head>
 <body>
