--- a/aula-06.html
+++ b/aula-06.html
@@ -48,6 +48,7 @@
         <script type="text/javascript" src="./js/aula-07.js"></script>
 
         <script type="text/javascript" src="./lib/jquery-ui/jquery-ui.min.js"></script>
+        <script type="text/javascript" src="./lib/jquery-ui/datepicker-pt-BR.js"></script>
 
 
 
