--- a/aula-06.html
+++ b/aula-06.html
@@ -94,6 +94,7 @@
                     <th>Telefone</th>
                     <th>Sexo</th>
                     <th>Data de Nascimento</th>
+                    <th>Apagar</th>
                 </tr>
             </thead>
 
@@ -104,6 +105,7 @@
                         <td>12-2222-3333</td>
                         <td>Masculino</td>
                         <td>22/02/2002</td>
+                        <td><span class="del">[X]</span></td>
                     </tr>
             </tbody>
         </table>
